# symphony

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTROL.md  Cargo.toml  Dockerfile  EXTENDING.md  LICENSE  METALAYER.md  Makefile  NOTICE  PLANS.md  README.md  SKILL.md  SPEC.md  WORKFLOW.md  cliff.toml  docker-compose.yml  install.sh  start.sh  stimulus-workflow.md
.agents/skills/symphony/: SKILL.md
.agents/skills/symphony/references/: operator-runbook.md  troubleshooting.md  workflow-config.md
.claude/: settings.json
.claude/skills/symphony/: SKILL.md
.claude/skills/symphony/references/: troubleshooting.md
.control/: commands.yaml  policy.yaml  state.json  topology.yaml
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tracker_plugin.yml
.github/workflows/: ci.yml  release.yml
.obsidian/: app.json  graph.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
crates/symphony-agent/: Cargo.toml
crates/symphony-agent/src/: lib.rs  protocol.rs  runner.rs
crates/symphony-arcan/: Cargo.toml
crates/symphony-arcan/src/: client.rs  event_mapper.rs  lib.rs  runner.rs
crates/symphony-config/: Cargo.toml
crates/symphony-config/src/: lib.rs  loader.rs  template.rs  types.rs  watcher.rs
crates/symphony-core/: Cargo.toml
crates/symphony-core/src/: issue.rs  lib.rs  session.rs  state.rs  workspace.rs
crates/symphony-egri/: Cargo.toml
crates/symphony-egri/src/: batch.rs  config.rs  hive_adapter.rs  journal.rs  lib.rs  types.rs
crates/symphony-observability/: Cargo.toml
crates/symphony-observability/src/: lib.rs  server.rs
crates/symphony-orchestrator/: Cargo.toml
crates/symphony-orchestrator/src/: dispatch.rs  hive.rs  lib.rs  reconcile.rs  scheduler.rs
crates/symphony-tracker/: Cargo.toml
crates/symphony-tracker/src/: github.rs  graphql_tool.rs  lib.rs  linear.rs  markdown.rs
crates/symphony-workspace/: Cargo.toml
crates/symphony-workspace/src/: lib.rs
dashboard/: .gitignore  Dockerfile  package.json  railway.toml  turbo.json
dashboard/apps/web/: .env.example  dashboard.config.ts  next.config.ts  package.json
dashboard/apps/web/app/: globals.css  layout.tsx
dashboard/apps/web/app/(dashboard)/: layout.tsx
dashboard/apps/web/app/(dashboard)/controls/: page.tsx
dashboard/apps/web/app/(dashboard)/issues/: page.tsx
dashboard/apps/web/app/(dashboard)/issues/[identifier]/: page.tsx
dashboard/apps/web/app/(dashboard)/metrics/: page.tsx
dashboard/apps/web/app/(dashboard)/overview/: page.tsx
dashboard/apps/web/app/(dashboard)/workspaces/: page.tsx
dashboard/apps/web/components/: app-sidebar.tsx
dashboard/apps/web/components/dashboard/: connection-indicator.tsx  issues-table.tsx  status-badge.tsx  token-chart.tsx
dashboard/apps/web/hooks/: use-connection-status.ts  use-symphony-metrics.ts  use-symphony-state.ts
dashboard/apps/web/lib/: auth.ts  config.ts  env-schema.ts  env.ts  logger.ts
dashboard/apps/web/lib/db/: queries.ts  schema.ts
dashboard/apps/web/lib/db/migrations/: 0000_sloppy_spot.sql
dashboard/apps/web/lib/db/migrations/meta/: 0000_snapshot.json  _journal.json
dashboard/apps/web/trpc/: react.tsx
dashboard/apps/web/trpc/routers/: _app.ts  settings.router.ts  symphony.router.ts
docs/: Architecture Map.base  Crates Dashboard.base  Symphony Index.md  Vault Conventions.md  Vault Health.base
docs/architecture/: Architecture Overview.md  Crate Map.md  Domain Model.md
docs/control/: Consciousness Architecture.md  Session Protocol.md
docs/conversations/: Conversations.md  session-2026-03-06-88703d60.md  session-2026-03-06-b37e7a97.md  session-2026-03-16-5a510370.md  session-2026-03-16-5a65e109.md  session-2026-03-16-e856bd3c.md  session-2026-03-17-2617354e.md  session-2026-03-17-540676a7.md  session-2026-03-17-635dce40.md  session-2026-03-17-7f02c7e0.md  session-2026-03-17-81b7171a.md  session-2026-03-17-cd62fcc4.md  session-2026-03-18-5ab8de40.md  session-2026-03-18-72911522.md  session-2026-03-18-8a3ce802.md
docs/crates/: symphony-agent.md  symphony-config.md  symphony-core.md  symphony-observability.md  symphony-orchestrator.md  symphony-tracker.md  symphony-workspace.md
docs/marketing/: blog-launch.md  x-launch-post.md
docs/operations/: Configuration Reference.md  Control Harness.md  Observability.md
docs/roadmap/: Production Roadmap.md  Project Status.md  Roadmap Tracker.base
evals/: control-metrics.yaml
evals/symphony-prompts/: README.md  constraint-check.sh  evaluator.sh  problem-spec.yaml  rollback.sh  run_eval.sh
examples/: github-claude.md  linear-claude.md  linear-codex.md  markdown-claude.md
scripts/: conversation-bridge-hook.sh  conversation-history.py  setup-branch-protection.sh
scripts/control/: refresh_state.sh  validate_policy.sh
scripts/harness/: audit_harness.sh  entropy_check.sh
src/: main.rs
src/cli/: client.rs  config_cmd.rs  control.rs  dashboard.rs  doctor.rs  init.rs  issues.rs  logs.rs  mod.rs  output.rs  run.rs  start.rs  status.rs  workspaces.rs
tests/: cli_integration.rs
