[package]
name = "symphony-config"
version.workspace = true
edition.workspace = true

[dependencies]
symphony-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
notify.workspace = true
tracing.workspace = true
tokio.workspace = true
liquid.workspace = true
chrono.workspace = true
