[package]
name = "symphony-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Configuration loading, validation, and template rendering for Symphony"

[dependencies]
symphony-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
notify.workspace = true
tracing.workspace = true
tokio.workspace = true
liquid.workspace = true
chrono.workspace = true
