[package]
name = "symphony-observability"
version.workspace = true
edition.workspace = true

[dependencies]
symphony-core.workspace = true
symphony-orchestrator.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
chrono.workspace = true
