[package]
name = "symphony-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
symphony-core.workspace = true
symphony-config.workspace = true
symphony-tracker.workspace = true
symphony-workspace.workspace = true
symphony-agent.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
