[package]
name = "symphony-tracker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Issue tracker integration (Linear GraphQL) for Symphony"

[dependencies]
symphony-core.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
async-trait = "0.1"
