[package]
name = "symphony-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Workspace management and hook execution for Symphony"

[dependencies]
symphony-core.workspace = true
symphony-config.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
